--- a/src/app/pages/admin/new-flight/new-flight.component.html
+++ b/src/app/pages/admin/new-flight/new-flight.component.html
@@ -1,1 +1,61 @@
-<p>new-flight works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <label for="flightId">Flight ID</label>
+        <input type="number" class="form-control" id="flightId" [(ngModel)]="flightObj.flightId">
+      </div>
+      <div class="form-group">
+        <label for="flightNumber">Flight Number</label>
+        <input type="text" class="form-control" id="flightNumber" [(ngModel)]="flightObj.flightNumber">
+      </div>
+      <div class="form-group">
+        <label for="departureAirportId">Departure Airport ID</label>
+        <input type="number" class="form-control" id="departureAirportId" [(ngModel)]="flightObj.departureAirportId">
+      </div>
+      <div class="form-group">
+        <label for="departureTime">Departure Time</label>
+        <input type="text" class="form-control" id="departureTime" [(ngModel)]="flightObj.departureTime">
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <label for="arriveAirportId">Arrival Airport ID</label>
+        <input type="number" class="form-control" id="arriveAirportId" [(ngModel)]="flightObj.arriveAirportId">
+      </div>
+      <div class="form-group">
+        <label for="arrivalTime">Arrival Time</label>
+        <input type="text" class="form-control" id="arrivalTime" [(ngModel)]="flightObj.arrivalTime">
+      </div>
+      <div class="form-group">
+        <label for="price">Price</label>
+        <input type="number" class="form-control" id="price" [(ngModel)]="flightObj.price">
+      </div>
+      <div class="form-group">
+        <label for="totalSeats">Total Seats</label>
+        <input type="number" class="form-control" id="totalSeats" [(ngModel)]="flightObj.totalSeats">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <label for="flightVendorId">Flight Vendor ID</label>
+        <input type="number" class="form-control" id="flightVendorId" [(ngModel)]="flightObj.flightVendorId">
+      </div>
+      <div class="form-group">
+        <label for="travelDate">Travel Date</label>
+        <input type="text" class="form-control" id="travelDate" [(ngModel)]="flightObj.travelDate">
+      </div>
+    </div>
+
+    <div class="row pt-5">
+        <div class="col-3 text-center">
+            <button class="btn btn-secondary">Reset</button>
+        </div>
+        <div class="col-3 text-center">
+            <button class="btn btn-success" (click)="OnSaveFlight()">Create Flight</button>
+        </div>
+    </div>
+  </div>
+</div>
